<resources>
    <string name="app_name">Proyecto</string>
    <string name="a_bienvenido">Bienvenido</string>
    <string name="a_email">Email</string>
    <string name="a_pass">Password</string>
    <string name="a_ingresar">Ingresar</string>
    <string name="a_google">Continuar con Google</string>
    <string name="a_noCuenta">¿No tienes Cuenta?.Registrate</string>
    <string name="a_menu">Menu de Inicio</string>
    <!--Actividad 2-->
    <string name="b_nombre">Nombre</string>
    <string name="b_confirmar">Confirmar Password </string>
    <string name="b_regi">Registrarse</string>
</resources>