<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".view.Inicio">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_menu"
                android:textColor="#000"
                android:background="@drawable/background_1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="7dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_loop="true"
                android:layout_gravity="center"
                app:lottie_rawRes="@raw/logeousuario"
                android:layout_marginBottom="10dp"
                app:lottie_autoPlay="true"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/TextInputLayout"

                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/a_email"
                    android:id="@+id/email1"
                    android:inputType="textPersonName"
                    android:padding="16dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/baseline_supervised_user_circle_24"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/TextInputLayout"
                android:layout_marginBottom="10dp"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/a_pass"
                    android:inputType="textPassword"
                    android:id="@+id/password1"
                    android:padding="16dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/baseline_lock_24"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_ingresar"
                style="@style/Widget.AppCompat.Button"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:padding="10dp"
                android:background="@drawable/background_2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:id="@+id/ingresar1"
                android:textSize="20sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_google"
                style="@style/Widget.AppCompat.Button"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:padding="10dp"
                android:background="@drawable/background_3"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:drawableStart="@drawable/google"
                android:layout_marginBottom="10dp"
                android:id="@+id/google1"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_noCuenta"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:id="@+id/noCuenta"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>